--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+body{
+  font-family :sans-serif;
+  color-scheme:light dark;
+  color:rgba(255,255,255,0.87);
+  background-color:#242424;
+  margin:0;
+  display:flex;
+  padding:20px;
+  min-width:320px;
+  min-height:100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+  display:flex;
+  flex-direction:column;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn-container{
+  display:flex;
+  gap:10px
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button{
+  border-radius:8px;
+  border:1px solid transparent;
+  padding:0.6em 1.2em;
+  font-weight:500;
+  font-family:inherite;
+  background-color:#gray;
+  cursor:pointer;
+  transition:border-color 0.25s;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover{
+  border-color:#646cff;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:focus, 
+button:focus-visible{
+  outline:4px auto -webkit-focus-ring-color;
+}
+
+button.selected{
+  background-color:#646cff;
 }
